small improvements to shitty proportions

--- a/index.css
+++ b/index.css
@@ -28,11 +28,12 @@ main {
   padding: 10px;
   height: 30px;
   text-align: center;
+  display: flex;
 }
 
 .navigation-menu ul
 {
-  margin: 0;
+  margin: auto;
   padding: 0;
 }
 
@@ -58,6 +59,7 @@ main {
   width: 50%; 
   border-radius: 50%; 
   margin: 20px;
+  max-width: 300px;
 }
 
 .bio {
@@ -66,4 +68,13 @@ main {
   margin: 0 auto;
   padding: 0 10px;
   width: 75%;
+  max-width: 400px;
+}
+
+.bio p {
+  font-size: 15px;
+}
+
+#obs {
+  font-style: italic;
 }
