--- a/index.css
+++ b/index.css
@@ -1,85 +1,69 @@
 * {
-  box-sizing: border-box;
+  margin: 0;
 }
 
 body {
-  background: #0F2027;  /* fallback for old browsers */
-  background: -webkit-linear-gradient(to bottom, #2C5364, #203A43, #0F2027);  /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to bottom, #2C5364, #203A43, #0F2027); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-  height: 100%;
-  font-family: -apple-system, BlinkMacSystemFont, 'Roboto', 'Segoe UI', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Open Sans', 'Helvetica Neue', sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  height: 100vh;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-size: 1.25rem;
-  margin: 0 auto;
+  background-color: #0F2027;
+  color: #fff;
+  background-image: linear-gradient(to bottom, #2C5364, #203A43, #0F2027);
   background-repeat: no-repeat;
-  background-attachment: fixed;
+}
+
+header {
+  background-color: #273642;
+  min-height: 50px;
+  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.25);
+}
+
+ul {
+  list-style: none;
+}
+
+.menu {
+  display: flex;
+  justify-content: center;
+  gap: 60px;
+  padding: 20px;
+}
+
+.menu a {
+  text-decoration: none;
+  color: #fff;
 }
 
 main {
-  margin-top: 50px;
-  padding: 10px;
-  color: white;
-  display: flex;
-  flex-direction: row;
-  align-items: baseline;
-}
-
-.navigation-menu {
-  background: #273642;
-  color: white;
-  position: fixed;
-  width: 100%;
-  top: 0;
-  padding: 10px;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(600px, 1fr));
+  align-items: center;
   text-align: center;
-  display: block;
-}
-
-.navigation-menu ul
-{
-  margin: 0;
-  padding: 0;
-}
-
-.navigation-menu ul li
-{
-  list-style-type: none;
-  display: block;
-  margin: 5px;
-}
-
-.navigation-menu ul li:not(:first-child):before {
-  content: "/";
-  margin: 0, 30px;
-}
-
-.bio {
-  text-align: center;
-  display: block;
+  padding: 10px;
   margin: 0 auto;
-  width: 50%;
-  float: left;
+  row-gap: 60px;
 }
 
-.bio img {
-  width: 50%; 
-  border-radius: 50%; 
-  margin: 20px;
+.about-cover {
+  margin-top: 20px;
+}
+
+.about-cover h1 {
+  padding: 20px;
+}
+
+.about-cover img {
   max-width: 300px;
+  border-radius: 50%;
+  display: inline-block;
 }
 
-.about-me {
-  margin: 0 auto;
-  padding: 0 10px;
-  width: 50%;
-  float: left;
-}
-
-.about-me p {
-  font-size: 15px;
-}
-
-#obs {
-  font-style: italic;
+.about-summary {
+  line-height: 2rem;
+  justify-self: center;
+  text-align: left;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  max-width: 60ch;
 }
